Added weather-service unit test project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     container_name: weather-service
     build:
       context: ./services/weather
+      dockerfile: Dockerfile
     ports:
       - 6080:80
       - 6443:443
