--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,13 +2,19 @@
 
 version: 2
 updates:
-    #nuget updates
+    #weather-api nuget updates
   - package-ecosystem: "nuget"
-    directory: "services/weather/"
+    directory: "services/weather/Weather.Api/"
     schedule:
       interval: "daily"
 
-    #npm updates
+    #weather-tests nuget updates
+  - package-ecosystem: "nuget"
+    directory: "services/weather/Weather.Tests/"
+    schedule:
+      interval: "daily"
+
+    #client-app npm updates
   - package-ecosystem: "npm"
     directory: "client/app/"
     schedule:
