--- a/client/app/package.json
+++ b/client/app/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.5.1",
     "merge": "1.2.1",
     "mini-css-extract-plugin": "0.9.0",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "popper.js": "^1.16.0",
@@ -51,7 +52,7 @@
     "redux-thunk": "2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.2",
-    "sass-loader": "8.0.2",
+    "sass-loader": "^10.1.0",
     "semver": "6.3.0",
     "style-loader": "2.0.0",
     "svgo": "1.3.0",
