--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -3,6 +3,9 @@ server {
   location /weather/ {
     proxy_pass http://host.docker.internal:6080/;
   }
+  location /eucre/ {
+    proxy_pass http://host.docker.internal:7080/;
+  }
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
