--- a/client/app/package.json
+++ b/client/app/package.json
@@ -41,10 +41,10 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "16.11.0",
+    "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^10.2.1",
-    "react-dom": "16.11.0",
+    "react-dom": "^17.0.1",
     "react-redux": "7.2.2",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
@@ -68,8 +68,8 @@
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "16.9.9",
-    "@types/react-dom": "16.9.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "7.1.5",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
