updated weather service endpoint to similar convention as game api

--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
-  location /weather/ {
-    proxy_pass http://host.docker.internal:6080/;
+  location /api/weather/ {
+    proxy_pass http://host.docker.internal:6080/api/weather/;
   }
   location /eucre/ {
     proxy_pass http://host.docker.internal:7080/;
