--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -4,7 +4,7 @@ server {
     proxy_pass http://host.docker.internal:6080/api/weather/;
   }
   location /eucre/ {
-    proxy_pass http://host.docker.internal:7080/;
+    proxy_pass http://host.docker.internal:7080/api/eucre/;
   }
   location / {
     root   /usr/share/nginx/html;
