Fixed some nginx docker routing issues

--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -1,10 +1,10 @@
 server {
   listen 80;
   location /api/weather/ {
-    proxy_pass http://host.docker.internal:6080/api/weather/;
+    proxy_pass http://host.docker.internal:6010/api/weather/;
   }
-  location /eucre/ {
-    proxy_pass http://host.docker.internal:7080/api/eucre/;
+  location /api/eucre/ {
+    proxy_pass http://host.docker.internal:6020/api/eucre/;
   }
   location / {
     root   /usr/share/nginx/html;
