--- a/client/app/package.json
+++ b/client/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.10",
+    "@microsoft/signalr": "^5.0.1",
     "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "babel-eslint": "10.1.0",
