--- a/client/app/tsconfig.json
+++ b/client/app/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "app/*": ["*"]
+    },
     "target": "es5",
     "allowJs": true,
     "esModuleInterop": true,
