Added infrastructure for server side hub

--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -6,6 +6,11 @@ server {
   location /api/eucre/ {
     proxy_pass http://host.docker.internal:6020/api/eucre/;
   }
+
+  location /hub/eucre/ {
+    proxy_pass http://host.docker.internal:6020/hub/eucre/;
+  }
+  
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
