signalr proof of concept checkpoint with shuffle action

--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -9,8 +9,11 @@ server {
 
   location /hub/eucre/ {
     proxy_pass http://host.docker.internal:6020/hub/eucre/;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
   }
-  
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
