--- a/client/app/package.json
+++ b/client/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@babel/core": "7.12.10",
     "@microsoft/signalr": "^5.0.1",
     "@svgr/webpack": "4.3.3",
