--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   web-app:
@@ -47,7 +47,7 @@ services:
     image: mongo:4.2.10
     container_name: mongodb
     ports:
-      - '27017:27017'
+      - "27017:27017"
     volumes:
       - mongodb:/data/db
     networks:
@@ -57,7 +57,7 @@ services:
     image: mongoclient/mongoclient:4.0.0
     container_name: mongodb-client
     ports:
-      - "3000:3000"
+      - "4000:3000"
     depends_on:
       - mongodb
     environment:
