--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -1,14 +1,14 @@
 server {
   listen 80;
   location /api/weather/ {
-    proxy_pass http://host.docker.internal:6010/api/weather/;
+    proxy_pass http://localhost:6010/api/weather/;
   }
   location /api/eucre/ {
-    proxy_pass http://host.docker.internal:6020/api/eucre/;
+    proxy_pass http://localhost:6020/api/eucre/;
   }
 
   location /hub/eucre/ {
-    proxy_pass http://host.docker.internal:6020/hub/eucre/;
+    proxy_pass http://localhost:6020/hub/eucre/;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
