--- a/client/app/.env.example
+++ b/client/app/.env.example
@@ -1,5 +1,8 @@
 BROWSER=none
 REACT_APP_WEATHER_URL=http://localhost:6010/
 REACT_APP_EUCRE_URL=http://localhost:6020/
+REACT_APP_LIBRARY_URL=http://localhost:6030/
+REACT_APP_LOBBY_URL=http://localhost:6040/
+REACT_APP_PROFILE_URL=http://localhost:6050/
 REACT_APP_AUTH0_DOMAIN=your-app-auth0-domain
 REACT_APP_AUTH0_CLIENT_ID=your-app-auth0-key
