--- a/proxy/config/web-app.conf
+++ b/proxy/config/web-app.conf
@@ -6,9 +6,25 @@ server {
   location /api/eucre/ {
     proxy_pass http://localhost:6020/api/eucre/;
   }
+  location /api/library/ {
+    proxy_pass http://localhost:6030/api/library/;
+  }
+  location /api/lobby/ {
+    proxy_pass http://localhost:6040/api/lobby/;
+  }
+  location /api/profile/ {
+    proxy_pass http://localhost:6050/api/profile/;
+  }
 
   location /hub/eucre/ {
     proxy_pass http://localhost:6020/hub/eucre/;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $host;
+  }
+
+  location /hub/lobby/ {
+    proxy_pass http://localhost:6040/hub/lobby/;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
