Added dotnet services development appsettings to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -231,4 +231,8 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 
+# Client .env
 **/.env
+
+# Microservice App settings
+services/**/appsettings.Development.json
