--- a/services/eucre-game/Games.Eucre.Api/appsettings.json
+++ b/services/eucre-game/Games.Eucre.Api/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MongoDb": "mongodb://localhost:27017"
+  },
+  "Auth0": {
+    "Domain": "REPLACE_ME",
+    "Audience": "REPLACE_ME"
   }
 }
