--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
   workflow_dispatch:
 
@@ -26,18 +26,42 @@ jobs:
       - name: Run client-tests
         run: docker-compose run --rm client-tests
 
-  server-build-tests:
+  build-weather-service:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v2
       - name: Build weather-service container
         run: docker-compose build weather-service
+
+  build-eucre-game:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Build eucre-game container
         run: docker-compose build eucre-game
+
+  build-library-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Build library-service container
         run: docker-compose build library-service
+
+  build-lobby-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Build lobby-service container
         run: docker-compose build lobby-service
+
+  build-profile-service:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - name: Build profile-service container
         run: docker-compose build profile-service
