Added Auth0 support to signalr game hub

--- a/client/app/.env.example
+++ b/client/app/.env.example
@@ -1,6 +1,7 @@
 BROWSER=none
 REACT_APP_WEATHER_URL=http://localhost:6010/
 REACT_APP_EUCRE_URL=http://localhost:6020/
+REACT_APP_EUCRE_AUDIENCE=your-eucre-api-audience
 REACT_APP_LIBRARY_URL=http://localhost:6030/
 REACT_APP_LOBBY_URL=http://localhost:6040/
 REACT_APP_PROFILE_URL=http://localhost:6050/
