--- a/client/app/package.json
+++ b/client/app/package.json
@@ -7,7 +7,7 @@
     "@babel/core": "7.12.10",
     "@microsoft/signalr": "^5.0.1",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -52,7 +52,7 @@
     "react-redux": "7.2.2",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "redux": "4.0.4",
+    "redux": "^4.0.5",
     "redux-thunk": "2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.2",
@@ -74,16 +74,16 @@
     "@types/node": "12.11.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "7.1.5",
+    "@types/react-redux": "^7.1.15",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/parser": "^4.12.0",
     "cross-env": "6.0.3",
-    "eslint": "^7.15.0",
+    "eslint": "^7.17.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.22.0",
     "nan": "^2.14.2",
     "typescript": "3.6.4"
   },
