--- a/client/app/package.json
+++ b/client/app/package.json
@@ -33,7 +33,7 @@
     "jest-watch-typeahead": "0.4.2",
     "jquery": "^3.5.1",
     "merge": "1.2.1",
-    "mini-css-extract-plugin": "0.9.0",
+    "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
