--- a/client/app/package.json
+++ b/client/app/package.json
@@ -50,8 +50,8 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-redux": "7.2.2",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "2.3.0",
     "resolve": "1.15.0",
@@ -75,8 +75,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
-    "@types/react-router": "5.1.2",
-    "@types/react-router-dom": "5.1.0",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/parser": "^4.12.0",
     "cross-env": "6.0.3",
     "eslint": "^7.17.0",
