Fix attempt on new workflows

--- a/.github/workflows/eucre-game.yml
+++ b/.github/workflows/eucre-game.yml
@@ -2,8 +2,9 @@ name: Eucre Game
 on:
   push:
     paths:
-      - 'docker-compose.yml'
-      - 'services/eucre-game/*'
+      - ".github/workflows/eucre-game.yml"
+      - "docker-compose.yml"
+      - "services/eucre-game/*"
   pull_request:
     branches: [master]
 
