--- a/.github/workflows/lobby-service.yml
+++ b/.github/workflows/lobby-service.yml
@@ -2,8 +2,9 @@ name: Lobby Service
 on:
   push:
     paths:
-      - "docker-compose.yml"
-      - "services/lobby-service/*"
+      - '.github/workflows/lobby-service.yml'
+      - 'docker-compose.yml'
+      - 'services/lobby-service/*'
   pull_request:
     branches: [master]
 
