Attempted fix for path target

--- a/.github/workflows/eucre-game.yml
+++ b/.github/workflows/eucre-game.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - ".github/workflows/eucre-game.yml"
       - "docker-compose.yml"
-      - "services/eucre-game/*"
+      - "services/eucre-game/**"
   pull_request:
     branches: [master]
 
