--- a/.github/workflows/library-service.yml
+++ b/.github/workflows/library-service.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - ".github/workflows/library-service.yml"
       - "docker-compose.yml"
-      - "services/library-service/**"
+      - "services/library/**"
   pull_request:
     branches: [master]
 
