Mongo DB and Controller & Client Boiler Plate

--- a/services/profile/Platform.Profile.Api/appsettings.json
+++ b/services/profile/Platform.Profile.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "DatabaseName" :  "profile",
+    "ConnectionString": "mongodb://localhost:27017",
+    "ProfileDatabaseName": "profile"
+  }
 }
