Fixed connection string

--- a/services/profile/Platform.Profile.Api/appsettings.json
+++ b/services/profile/Platform.Profile.Api/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
-    "DatabaseName" :  "profile",
-    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "profile",
+    "ConnectionString": "mongodb://mongodb:27017",
     "ProfileDatabaseName": "profile"
   }
 }
