--- a/.github/workflows/eucre-game.yml
+++ b/.github/workflows/eucre-game.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - ".github/workflows/eucre-game.yml"
       - "docker-compose.yml"
+      - "services/common/**"
       - "services/eucre-game/**"
   pull_request:
     branches: [master]
