--- a/services/lobby/Dockerfile
+++ b/services/lobby/Dockerfile
@@ -6,18 +6,20 @@ EXPOSE 443
 
 # Configure build image from sdk
 FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+WORKDIR /common/Platform.Common
+COPY /common/Platform.Common/*.csproj .
 WORKDIR /src/Platform.Lobby.Api
-COPY Platform.Lobby.Api/*.csproj .
+COPY lobby/Platform.Lobby.Api/*.csproj .
 RUN dotnet restore
-COPY Platform.Lobby.Api/. .
+COPY lobby/Platform.Lobby.Api/. .
 RUN dotnet build -c Release -o /app/build
 
 # Configure testing image from build image
 FROM build AS testing
 WORKDIR /src/Platform.Lobby.Tests
-COPY Platform.Lobby.Tests/*.csproj .
+COPY lobby/Platform.Lobby.Tests/*.csproj .
 RUN dotnet restore
-COPY Platform.Lobby.Tests/. .
+COPY lobby/Platform.Lobby.Tests/. .
 RUN dotnet test
 
 # Configure publishing image from build image
