--- a/services/lobby/Platform.Lobby.Api/appsettings.json
+++ b/services/lobby/Platform.Lobby.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "DatabaseName": "lobby",
+    "ConnectionString": "mongodb://mongodb:27017",
+    "ProfileDatabaseName": "lobby"
+  }
 }
