npm updates; changed docker image due to issue with debian images and certs

--- a/services/lobby/Dockerfile
+++ b/services/lobby/Dockerfile
@@ -1,11 +1,11 @@
 # Configure base image
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 # Configure build image from sdk
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /common/Platform.Common
 COPY /common/Platform.Common/*.csproj .
 WORKDIR /src/Platform.Lobby.Api
