--- a/client/app/package.json
+++ b/client/app/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^1.5.0",
+    "@auth0/auth0-react": "^1.3.0",
     "@babel/core": "7.12.10",
-    "@microsoft/signalr": "^5.0.7",
+    "@microsoft/signalr": "^5.0.4",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -33,31 +33,30 @@
     "jest-watch-typeahead": "0.4.2",
     "jquery": "^3.6.0",
     "merge": "1.2.1",
-    "mini-css-extract-plugin": "^1.6.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "popper.js": "^1.16.0",
-    "postcss": "^8.3.2",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.4",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-redux": "7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0",
+    "redux": "^4.0.5",
     "redux-thunk": "2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.2",
-    "sass-loader": "^10.2.0",
+    "sass-loader": "^10.1.1",
     "semver": "6.3.0",
     "style-loader": "2.0.0",
     "svgo": "^1.3.2",
@@ -73,18 +72,18 @@
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
     "@types/node": "12.11.6",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.7",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.16",
-    "@types/react-router": "^5.1.15",
+    "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/parser": "^4.17.0",
     "cross-env": "6.0.3",
-    "eslint": "^7.28.0",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint": "^7.22.0",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.22.0",
     "nan": "^2.14.2",
     "typescript": "3.6.4"
   },
